adjusted Makefiles for git

--- a/acme-jenkins/Makefile
+++ b/acme-jenkins/Makefile
@@ -3,7 +3,7 @@
 acme-jenkins: clean
 	mkdir -p dist/RPMS/noarch
 	rm -rf build-target
-	svn export buildroot build-target
+	cp -r buildroot build-target
 	rpmbuild -bb --target=noarch --define "_topdir ${PWD}/dist" --buildroot="${PWD}/build-target" acme-jenkins.spec
 
 clean:
