added check for empty buildroot

--- a/acme-rundeck-config/Makefile
+++ b/acme-rundeck-config/Makefile
@@ -3,7 +3,7 @@
 acme-rundeck-config: clean
 	mkdir -p dist/RPMS/noarch
 	rm -rf build-target
-	cp -r buildroot build-target
+	cp -r buildroot build-target || mkdir build-target
 	rpmbuild -bb --target=noarch --define "_topdir ${PWD}/dist" --buildroot="${PWD}/build-target" acme-rundeck-config.spec
 
 clean:
