fixed bogus loading of python26

--- a/acme-rundeck-options/buildroot/etc/httpd/conf.d/acme-rundeck-options.conf
+++ b/acme-rundeck-options/buildroot/etc/httpd/conf.d/acme-rundeck-options.conf
@@ -1,6 +1,10 @@
+<IfModule !python_module>
+   LoadModule python_module modules/python26-mod_python.so
+</IfModule>
+
 <VirtualHost localhost:80>
  
-     <IfModule mod_python.c>
+     <IfModule python_module>
          SetHandler python-program
          AddHandler mod_python .py
          PythonHandler mod_python.publisher
